# MinecraftLCE

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/scripts/: gen_report.py
.github/workflows/: lint.yml  test-compile.yml  update-progress.yml
data/: data_symbols.csv  java_class_map.yaml  mcswitch_functions.csv
docs/: BUILDING.md  CONTRIBUTING.md  DECOMPILERS.md
lib/: windows.cpp  windows.h
lib/libpng/: CMakeLists.txt
lib/nnheaders/: CMakeLists.txt  README.md
lib/nnheaders/.github/workflows/: lint_pr.yml
lib/nnheaders/include/nn/: account.h  atk.h  audio.h  bcat.h  crypto.h  diag.h  friends.h  fs.h  hid.h  image.h  init.h  mem.h  nifm.h  nn_BitTypes.h  oe.h  os.h  ro.h  settings.h  sf.h  socket.h  ssl.h  time.h  types.h  util.h  vi.h
lib/nnheaders/include/nn/atk/: SoundArchivePlayer.h  SoundDataManager.h  SoundPlayer.h
lib/nnheaders/include/nn/atk/detail/: AdvancedWaveSoundRuntime.h  BasicSound.h  SequenceSoundRuntime.h  SoundArchiveManager.h  StreamSoundRuntime.h  WaveSoundRuntime.h
lib/nnheaders/include/nn/font/: font_Util.h
lib/nnheaders/include/nn/g3d/: BindFuncTable.h  ModelObj.h  ResFile.h  ResFogAnim.h  ResLightAnim.h  ResMaterial.h  ResMaterialAnim.h  ResModel.h  ResSceneAnim.h  ResShapeAnim.h  ResSkeletalAnim.h  ResSkeleton.h  SkeletonObj.h
lib/nnheaders/include/nn/gfx/: gfx_Buffer.h  gfx_BufferData-api.nvn.8.h  gfx_BufferInfo.h  gfx_BufferInfoData.h  gfx_CommandBuffer.h  gfx_CommandBufferData-api.nvn.8.h  gfx_CommandBufferInfo.h  gfx_CommandBufferInfoData.h  gfx_Common.h  gfx_DescriptorPool.h  gfx_DescriptorPoolData-api.nvn.8.h  gfx_DescriptorPoolInfo.h  gfx_DescriptorPoolInfoData.h  gfx_DescriptorSlot.h  gfx_Device.h  gfx_DeviceData-api.nvn.8.h  gfx_DeviceInfo.h  gfx_DeviceInfoData.h  gfx_Enum.h  gfx_GpuAddress.h  gfx_Interoperation-api.nvn.8.h  gfx_MemoryPool.h  gfx_MemoryPoolData-api.nvn.8.h  gfx_MemoryPoolInfo.h  gfx_MemoryPoolInfoData.h  gfx_PipelineData-api.nvn.8.h  gfx_Queue.h  gfx_QueueData-api.nvn.8.h  gfx_QueueInfo.h  gfx_QueueInfoData.h  gfx_ResShader.h  gfx_ResShaderData-api.nvn.h  gfx_ResShaderData.h  gfx_ResTexture.h  gfx_ResTextureData.h  gfx_ResUserData.h  gfx_ResUserDataData.h  gfx_RootSignatureData-api.common.h  gfx_RootSignatureInfo.h  gfx_RootSignatureInfoData.h  (+26 more)
lib/nnheaders/include/nn/gfx/detail/: gfx_Buffer-api.nvn.8.h  gfx_CommandBuffer-api.nvn.8.h  gfx_Common-api.nvn.h  gfx_DataContainer.h  gfx_DescriptorPool-api.nvn.8.h  gfx_Device-api.nvn.8.h  gfx_Fwd.h  gfx_MemoryPool-api.nvn.8.h  gfx_Misc.h  gfx_Pipeline-api.nvn.8.h  gfx_Queue-api.nvn.8.h  gfx_RequiredMemory.h  gfx_ResShaderImpl.h  gfx_RootSignature-api.common.h  gfx_RootSignature-api.nvn.8.h  gfx_Sampler-api.nvn.8.h  gfx_Shader-api.nvn.8.h  gfx_State-api.nvn.8.h  gfx_SwapChain-api.nvn.8.h  gfx_Sync-api.nvn.8.h  gfx_Texture-api.nvn.8.h
lib/nnheaders/include/nn/gfx/util/: gfx_PrimitiveShape.h
lib/nnheaders/include/nn/nex/: RootObject.h  auth.h  berkeley.h  buffer.h  cache.h  checksum.h  client.h  data.h  ddl.h  dynamic.h  encryption.h  hash.h  instance.h  key.h  plugin.h  pseudo.h  reference.h  socket.h  string.h  system.h  time.h
lib/nnheaders/include/nn/os/: os_ConditionVariableCommon.h  os_MessageQueueTypes.h  os_Mutex.h  os_MutexTypes.h  os_ThreadCommon.h  os_ThreadTypes.h
lib/nnheaders/include/nn/os/detail/: os_InternalConditionVariable-os.horizon.h  os_InternalConditionVariable.h  os_InternalCriticalSection-os.horizon.h  os_InternalCriticalSection.h  os_ThreadTypes-os.horizon.h
lib/nnheaders/include/nn/swkbd/: swkbd.h
lib/nnheaders/include/nn/ui2d/: Layout.h  Material.h  Pane.h  Parts.h
lib/nnheaders/include/nn/ui2d/detail/: TexCoordArray.h
lib/nnheaders/include/nn/util/: AccessorBase.h  MathTypes.h  util_Arithmetic.h  util_BinTypes.h  util_BinaryFormat.h  util_BitArray.h  util_BitFlagSet.h  util_BitPack.h  util_BitUtil.h  util_BytePtr.h  util_ResDic.h  util_StringView.h  util_TypedStorage.h
lib/nnheaders/include/nn/util/detail/: util_ArithmeticImpl.h  util_TypeTraits.h
lib/nnheaders/include/nn/vfx/: Config.h  Heap.h  System.h
lib/nnheaders/include/nvn/: nvn_Cpp.h  nvn_CppFuncPtrBase.h  nvn_CppMethods.h  nvn_DeviceConstantsNX.h
lib/nnheaders/src/NintendoSDK/gfx/: gfx_BufferInfo.cpp  gfx_CommandBufferInfo.cpp  gfx_DescriptorPoolInfo.cpp  gfx_DeviceInfo.cpp  gfx_Interoperation-api.nvn.cpp  gfx_MemoryPoolInfo.cpp  gfx_QueueInfo.cpp  gfx_ResShader.cpp  gfx_ResTexture.cpp  gfx_SamplerInfo.cpp  gfx_ShaderInfo.cpp  gfx_StateInfo.cpp  gfx_SyncInfo.cpp  gfx_TextureInfo.cpp
lib/nnheaders/src/NintendoSDK/gfx/detail/: gfx_Buffer-api.nvn.8.cpp  gfx_CommandBuffer-api.nvn.8.cpp  gfx_CommonHelper.cpp  gfx_CommonHelper.h  gfx_DescriptorPool-api.nvn.8.cpp  gfx_Device-api.nvn.8-os.horizon.cpp  gfx_GlslcFunction.cpp  gfx_MemoryPool-api.nvn.8.cpp  gfx_NvnHelper-os.horizon.cpp  gfx_NvnHelper.cpp  gfx_NvnHelper.h  gfx_ResShader-api.nvn.8.cpp  gfx_Sampler-api.nvn.8.cpp  gfx_Shader-api.nvn.8.cpp  gfx_State-api.nvn.8.cpp  gfx_Texture-api.nvn.8.cpp
lib/nnheaders/src/NintendoSDK/gfx/util/: gfx_ObjectDebugLabel-api.nvn.8.cpp  gfx_PrimitiveShape.cpp
lib/nnheaders/src/NintendoSDK/nnSdk/: util.cpp
lib/zlib/: CMakeLists.txt  inflate.c
src/: CMakeLists.txt  DecompUtils.h  PRO_Main.cpp  SharedConstants.cpp  SharedConstants.h  main.cpp  main.h  types.h
src/4JLibraries_Source/: Awards.cpp  Awards.h  InfoBarManager.cpp  InfoBarManager.h  Utils.h  XLockFreeStack.cpp  XLockFreeStack.h
src/Minecraft.Client/: ByteOrder.h  C4JEventImpl.h  C4JThreadImpl.cpp  C4JThreadImpl.h  CGameNetworkManager.h  CInput.h  CMakeLists.txt  CMinecraftApp.cpp  CMinecraftApp.h  CProfile.cpp  CProfile.h  CTelemetryManager.h  Compression.cpp  Compression.h  DataFixers.h  ESavePlatform.h  FrameTimer.h  GameRuleManager.h  GameSettings.h  GhostController.h  KeyMapping.cpp  KeyMapping.h  Minecraft.cpp  Minecraft.h  Options.cpp  Options.h  PRO_Main.cpp  ParticleEngine.h  ParticleType.h  STO_Main.cpp  SoundEvent.h  Timer.h  (+9 more)
toolchain/: ToolchainNX64.cmake
tools/: build.py  config.toml  lint.py  mangle.py  parse_languages_loc.py  setup.py
(+3592 files in other folders)
